[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-heap-plus = "0.5.0"
bpaf = "0.7.7"
color-eyre = { version = "0.6.2", default-features = false }
itertools = "0.10.5"
nom = "7.1.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.6.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
test-case = "2.2.2"
